<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <artifactId>RestrictedApi</artifactId>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerArgs>
                        <arg>-XDcompilePolicy=simple</arg>
                        <arg>--should-stop=ifError=FLOW</arg>
                        <arg>-Xplugin:ErrorProne</arg>
                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                    </compilerArgs>
                    <encoding>UTF-8</encoding>
                    <source>8</source>
                    <target>8</target>
                </configuration>
                <groupId>org.apache.maven.plugins</groupId>
                <version>3.11.0</version>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <artifactId>error_prone_core</artifactId>
            <groupId>com.google.errorprone</groupId>
            <version>${error-prone.version}</version>
        </dependency>
    </dependencies>
    <description>Demo project</description>
    <developers>
        <developer />
    </developers>
    <groupId>com.example</groupId>
    <licenses>
        <license />
    </licenses>
    <modelVersion>4.0.0</modelVersion>
    <name>RestrictedApi</name>

    <properties>
        <error-prone.version>2.35.1</error-prone.version>
        <java.version>17</java.version>
    </properties>
    <scm>
        <connection />
        <developerConnection />
        <tag />
        <url />
    </scm>
    <url />

    <version>0.0.1-SNAPSHOT</version>

</project>
